generate/resources/css/ref.css
/* Formatting of API reference pages */

body {
	background-color : rgb(232,232,232);
	font             : 10pt/1.2 "Open Sans","Trebuchet MS","DejaVu Sans",Geneva,sans-serif;
}

a {
	color : rgb(110, 165, 10);
}

h1 {
	display     : inline;
	font-size   : 200%;
	font-weight : bold;
}

h2 {
	font-size   : 150%;
	font-weight : bold;
}

h3 {
	font-size   : 117%;
	font-weight : bold;
}

ul li {
	padding-top : 6px;
	font-size   : 12px;
	white-space : nowrap;
}

table {
	padding          : 5px;
	border-collapse  : separate;
	border-spacing   : 0px;
	empty-cells      : show;
	background-color : rgb(246,246,246);
	font-size        : 12px;
	word-wrap        : break-word;
	border           : 1px solid rgb(230,230,230);
	border-radius    : 7px;
}

table td,
table th {
	vertical-align : top;
	padding        : 3px;
}

#ref-container {
	margin     : 0px auto;
	text-align : center;
}

#ref-box {
	display          : inline-block;
	width            : 900px;
	background-color : rgb(255,255,255);
	color            : rgb(65,85,65);
	text-align       : left;
	border           : 1px solid rgb(218,218,218);
	border-radius    : 10px;
}

#header {
	padding                 : 4px 8px;
	background-color        : rgb(246,246,246);
	color                   : rgb(77,100,77);
	border-bottom           : 1px solid rgb(218,218,218);
	border-top-right-radius : 10px;
	border-top-left-radius  : 10px;
}

#header .api-class-icon {
	vertical-align : baseline;
	margin         : 0px 8px 0px 2px;
}

#header-items > * {
	float  : right;
	margin : 4px 0px 0px 8px;
}

#return-link .api-member-icon {
	margin-right : 0px;
	margin-left  : 4px;
}

#footer {
	width            : 900px;
	margin           : 8px auto;
	padding          : 1em 0;
	background-color : rgb(255,255,255);
	color            : rgb(65,85,65);
	text-align       : left;
	border           : 1px solid rgb(218,218,218);
	border-radius    : 10px;
}

#footer > * {
	margin : 0 1em;
}

#searchMessage {
	color : rgb(156,180,156);
}

#search-results > ul {
	padding-left : 1em;
}

table .api-class-icon,
table .api-member-icon,
table .api-enum-icon,
table .api-enum-item-icon {
	margin-right : 0px;
}

#hierarchy-list {
	padding-left    : 1em;
	list-style-type : disc;
}

#hierarchy-list ul {
	list-style-type : disc;
}

#diff-message {
	padding       : 1em;
	font-style    : italic;
	border-bottom : 1px solid rgb(230,230,230);
}

#box-content {
	margin : 1em;
}

#info {
	display       : table-cell;
	width         : 100%;
	padding-right : 1em;
}

#hierarchy-nav {
	display     : table-cell;
	margin      : 1em;
	padding     : 0 1em;
	border-left : 1px solid rgb(230,230,230);
}

table.member-list th {
	font-size  : 110%;
	text-align : left;
}

table.member-list .col-return-type {
	text-align : right;
}

.enum-list {
	display : inline-block;
}

.enum-item-list {
	float  : left;
	margin : 1em;
}

.enum-item-list th.col-name {
	text-align : left;
}

.api-enum-item-value:after {
	content : ' : ';
}

#summary img,
#details img,
#member-descriptions img {
	max-width : 540px;
}

#member-descriptions > div > h3 {
	margin-left : -0.5em;
	padding     : 0.5em;
}
#member-descriptions > div:target > h3 {
	background-color : rgb(222, 240, 180);
	border-radius    : 4px;
}

#member-descriptions .api-member-icon {
	margin-right : 4px;
	margin-left  : 4px;
}

